cmake_minimum_required(VERSION 3.15)
project(test)

#[[
	第二章示例
]]
#add_executable(example2_1 examples/example_2_1.c) # C Primer Plus example 2_1
#add_executable(example2_2 examples/example_2_2.c) # C Primer Plus example 2_2
#add_executable(example2_3 examples/example_2_3.c) # C Primer Plus example 2_3
#add_executable(example2_4 examples/example_2_4.c) # C Primer Plus example 2_4

#[[
	第二章复习题
]]
add_executable(review_2_4 review/review_2_4.c) # C Primer Plus review_2_4

#[[
	第二章习题
]]

add_executable(exercises_2_1 exercises/exercises_2_1) # C Primer Plus exercises_2_1
add_executable(exercises_2_2 exercises/exercises_2_2) # C Primer Plus exercises_2_2
add_executable(exercises_2_3 exercises/exercises_2_3) # C Primer Plus exercises_2_3
add_executable(exercises_2_4 exercises/exercises_2_4) # C Primer Plus exercises_2_4
add_executable(exercises_2_5 exercises/exercises_2_5) # C Primer Plus exercises_2_5
add_executable(exercises_2_6 exercises/exercises_2_6) # C Primer Plus exercises_2_6
add_executable(exercises_2_7 exercises/exercises_2_7) # C Primer Plus exercises_2_7
add_executable(exercises_2_8 exercises/exercises_2_8) # C Primer Plus exercises_2_8
 
